Tue Jan 15 23:27:44 2002  Kristian Rietveld  <kris@gtk.org>

	* src/gtktreemodelfilter.[ch]: update

2002-01-14  Alex Larsson  <alexl@redhat.com>

	* yelp-section.[ch]:
	Add section type to section.

	* src/yelp-html.c:
	* src/yelp-info.c:
	* src/yelp-man.c:
	Update for the section type change.

	* src/yelp-scrollkeeper.c: 
	Update for the section type change.
	Make a scrollkeeper toplevel node.

2002-01-14  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.[ch]: renamed from YelpViewHome.

	* src/yelp-window.c: use YelpViewTOC instead of YelpViewHome.

	* AUTHORS: added Alexander Larsson

	* src/yelp-window.c (yw_about_cb): added Alexander Larsson to
	authors.

	* configure.in: bumped version to 0.1.99

2002-01-11  Alex Larsson  <alexl@redhat.com>

	* src/yelp-html.c (yh_link_clicked_cb):
	Shortcut pure relative links.
	(yelp_html_open_section): If there is a fragment
	in the uri, put that in sdata->anchor so that we
	jump to the anchor on load.

2002-01-11  Alex Larsson  <alexl@redhat.com>

	* src/yelp-util.[ch]:
	Add yelp_util_resolve_relative_uri() that resolves
	relative text uris. Taken from Gnome VFS. We can't use
	the Gnome-vfs one, since gnome_vfs_uri_new() expands
	the uris.
	
	* src/yelp-html.c (yh_link_clicked_cb):
	Correctly follow relative URIs.

2002-01-11  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c (yw_create_toolbar): don't include help-on in
	  the toolbar.

2002-01-10  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-content.c: 
	- use the new GtkTreeModelFilter.
	(yvc_tree_selection_changed_cb): get the model from the actual
	  tree and use it to get the section selected.
	(yelp_view_content_new): don't set the model here, use the
	  filtered model in content_show_path instead.
	(yelp_view_content_show_path): set the model to a filtered model
	  with virtual root set to the selected path.

	* src/yelp-util.c (yelp_util_contents_add_section): set third