@@ -28,6 +28,9 @@
 #include <libgnome/gnome-i18n.h>
 #include <libgtkhtml/gtkhtml.h>
 #include <stdio.h>
+#include <string.h>
+#include <stdarg.h>
+
 #include "yelp-view-toc.h"
 
 #define d(x) x
@@ -37,6 +40,7 @@ static void yvh_class_init         (YelpViewTOCClass     *klass);
 static void yvh_link_clicked_cb    (HtmlDocument          *doc, 
 				    const gchar           *url, 
 				    YelpViewTOC          *view);
+static void yelp_view_toc_man      (YelpViewTOC          *view);
 
 enum {
 	PATH_SELECTED,
@@ -133,6 +137,90 @@ yvh_link_clicked_cb (HtmlDocument *doc, const gchar *url, YelpViewTOC *view)
 	gtk_tree_path_free (path);
 }
 
+static void
+yelp_view_toc_open (YelpViewTOC *view)
+{
+	html_document_open_stream (view->priv->doc, "text/html");
+}
+
+static void
+yelp_view_toc_close (YelpViewTOC *view)
+{
+	/* TODO: If buffering, flush buffers */
+	html_document_close_stream (view->priv->doc);
+}
+
+static void
+yelp_view_toc_write (YelpViewTOC *view, char *data, int len)
+{
+	if (len < 0) {
+		len = strlen (data);
+	}
+
+#define DEBUG_OUTPUT
+#ifdef DEBUG_OUTPUT
+	g_print ("%.*s\n", len,data);
+#endif
+
+	/* TODO: Maybe we should be buffering writes */
+	
+	html_document_write_stream (view->priv->doc, data, len);
+}
+
+static void
+yelp_view_toc_printf (YelpViewTOC *view, char *format, ...)
+{
+  va_list args;
+  gchar *string;
+  
+  g_return_if_fail (format != NULL);
+  
+  va_start (args, format);
+  string = g_strdup_vprintf (format, args);
+  va_end (args);
+
+  yelp_view_toc_write (view, string, -1);
+  
+  g_free (string);
+}
+
+static void
+yelp_view_toc_write_header (YelpViewTOC *view, char *title)
+{
+	char *header="
+<html>
+  <head>
+    <title>
+      %s
+    </title> 
+    <style type=\"text/css\">
+      A:link { color: #00008b }
+      A:visited { color: #00008b }
+      A:active { color: #00008b }
+      BODY { color: #00008b }
+    </style>
+  </head>
+  <body bgcolor=\"#ffffff\">";
+	char *s;
+
+	s = g_strdup_printf (header, title);
+
+	yelp_view_toc_write (view, s, -1);
+
+	g_free (s);
+}
+
+static void
+yelp_view_toc_write_footer (YelpViewTOC *view)
+{
+	char *footer="
+  </body>
+</html>
+";
+	yelp_view_toc_write (view, footer, -1);
+	
+}
+
 GtkWidget *
 yelp_view_toc_new (GtkTreeModel *tree_model)
 {
@@ -151,30 +239,11 @@ yelp_view_toc_new (GtkTreeModel *tree_model)
 		return NULL;
 	}
 
-	/* FIXME: Write this in a sane way, just for testing right now  */
-	/* AND Yes: this will be marked for translation when it's fixed */
-	
-	html_document_open_stream (priv->doc, "text/html");
+#if 1
+	yelp_view_toc_open (view);
 	
 	{
-		int len;
-		gchar *name;
-
-		gchar *text;
-		gchar *header = "
-<html>
-  <head>
-    <title>
-      Help Toc View
-    </title> 
-    <style type=\"text/css\">
-      A:link { color: #00008b }          /* unvisited link */
-      A:visited { color: #00008b }        /* visited links */
-      A:active { color: #00008b }        /* active links */
-      BODY { color: #00008b }
-    </style>
-  </head>
-  <body bgcolor=\"#ffffff\">
+		gchar *table_start = "
     <center>
       <table cellspacing=\"20\" width=\"100%\">
         <tr>
@@ -186,7 +255,7 @@ yelp_view_toc_new (GtkTreeModel *tree_model)
              </ul>
              <ul>
 ";
-		gchar *footer = "
+		gchar *table_end = "
              </ul>
 	  </td>
           <td valign=\"top\">
@@ -201,19 +270,14 @@ yelp_view_toc_new (GtkTreeModel *tree_model)
       </tr>
     </table>
    </center>
-  </body>
-</html>
 ";
-		gchar       *tmp_str;
-		gchar       *other_stuff;
+		gchar *name;
 		GtkTreePath *path;
 		gchar       *path_str;
 
-		gtk_tree_model_get (priv->tree_model, &iter,
-				    0, &name,
-				    -1);
-
-		tmp_str = g_strdup ("");
+		yelp_view_toc_write_header (view, "Start page");
+		
+		yelp_view_toc_write (view, table_start, -1);
 		
 		do {
 			gtk_tree_model_get (priv->tree_model, &iter,
@@ -223,27 +287,136 @@ yelp_view_toc_new (GtkTreeModel *tree_model)
 			path = gtk_tree_model_get_path (tree_model, &iter);
 			path_str = gtk_tree_path_to_string (path);
 			
-			other_stuff = g_strdup_printf ("%s\n<li><a href=\"%s\">%s</a>", 
-						       tmp_str, 
-						       path_str, name);
-			gtk_tree_path_free (path);
-			g_free (path_str);
-			g_free (tmp_str);
-			tmp_str = other_stuff;
+			yelp_view_toc_printf (view, "<li><a href=\"%s\">%s</a>\n", 
+					      path_str, name);
 			
 		} while (gtk_tree_model_iter_next  (priv->tree_model, &iter));
 
-		text = g_strconcat (header, other_stuff, footer, NULL);
 		
-		len = strlen (text);
-                
-		html_document_write_stream (priv->doc, text, len);
+		yelp_view_toc_write (view, table_end, -1);
+		yelp_view_toc_write_footer (view);
 	}
 	
-	html_document_close_stream (priv->doc);
+	yelp_view_toc_close (view);
+#else
+	yelp_view_toc_man (view);
+#endif
 
 	return GTK_WIDGET (view);
 }
 
+static gboolean
+yelp_view_toc_find_toplevel (YelpViewTOC *view, char *name, GtkTreeIter *iter_res)
+{
+	YelpViewTOCPriv *priv;
+	GtkTreeIter iter;
+	char *node_name;
+
+	priv = view->priv;
+	
+	if (!gtk_tree_model_get_iter_from_string (priv->tree_model, &iter, "0")) {
+		g_warning ("No nodes in tree");
+		return FALSE;
+	}
+
+	do {
+		gtk_tree_model_get (priv->tree_model, &iter,
+				    0, &node_name,
+				    -1);
+		if (strcmp (name, node_name) == 0) {
+			*iter_res = iter;
+			g_free (node_name);
+			return TRUE;
+		}
+		g_free (node_name);
+	} while (gtk_tree_model_iter_next  (priv->tree_model, &iter));
+
+	return FALSE;
+}
 
 
+static void
+yelp_view_toc_man_emit (YelpViewTOC *view, GtkTreeIter *first, int level)
+{
+	YelpViewTOCPriv *priv;
+	GtkTreeIter iter, child;
+	char level_c;
+	char *name;
+	gboolean got_a_leaf;
+	int i;
+
+	priv = view->priv;
+
+	level_c = '1' + level;
+	got_a_leaf = FALSE;
+	iter = *first;
+	do {
+		if (gtk_tree_model_iter_children  (view->priv->tree_model,
+						   &child, &iter)) {
+			gtk_tree_model_get (priv->tree_model, &iter,
+					    0, &name,
+					    -1);
+			yelp_view_toc_printf (view, "<h%c>%s</h%c>\n", level_c, name, level_c);
+			g_free (name);
+			yelp_view_toc_man_emit (view, &child, level + 1);
+		} else {
+			got_a_leaf = TRUE;
+		}
+	} while (gtk_tree_model_iter_next  (priv->tree_model, &iter));
+
+
+	if (got_a_leaf) {
+		yelp_view_toc_write (view,
+				     "<table cellpadding=\"2\" cellspacing=\"2\" border=\"0\" width=\"100\%\"><tbody>\n",
+				     -1);
+
+		i = 0;
+		iter = *first;
+		do {
+			if (i % 3 == 0) {
+				if (i == 0) {
+					yelp_view_toc_write (view, "<tr>\n", -1);
+				} else {
+					yelp_view_toc_write (view, "</tr>\n<tr>\n", -1);
+				}
+			}
+			
+			if (!gtk_tree_model_iter_has_child (view->priv->tree_model,
+							    &iter)) {
+				gtk_tree_model_get (priv->tree_model, &iter,
+						    0, &name, -1);
+				yelp_view_toc_printf (view, "<td valign=\"Top\">%s</td>\n", name);
+				g_free (name);
+				i++;
+			}
+		} while (gtk_tree_model_iter_next  (priv->tree_model, &iter));
+		
+		yelp_view_toc_write (view, "</tr>\n", -1);
+		yelp_view_toc_write (view, "</tbody></table>\n", -1);
+	}
+}
+
+static void 
+yelp_view_toc_man (YelpViewTOC *view)
+{
+	GtkTreeIter root, first;
+
+	if (!yelp_view_toc_find_toplevel (view, "man", &root)) {
+		g_warning ("Unable to find man toplevel");
+		return;
+	}
+	if (!gtk_tree_model_iter_children (view->priv->tree_model,
+					   &first,
+					   &root)) {
+		return;
+	}
+
+	yelp_view_toc_open (view);
+	
+	yelp_view_toc_write_header (view, "Man pages");
+		
+	yelp_view_toc_man_emit (view, &first, 0);
+		
+	yelp_view_toc_write_footer (view);
+	yelp_view_toc_close (view);
+}
